        Reviewed by Dave Harrison.

http://bugs.webkit.org/show_bug.cgi?id=11402
        REGRESSION: onChange does not work anymore for 1st item in popup

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::HTMLSelectElement):
        (WebCore::HTMLSelectElement::reset):
        Set m_lastOnChangeIndex to -1.



Canonical link: https://commits.webkit.org/14802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17603 268f45cc-cd09-0410-ab3c-d52691b4dbfc